tweak meta size to avoid being too close to posters

--- a/common/common.scss
+++ b/common/common.scss
@@ -180,7 +180,7 @@
     display: grid;
     padding-top: 10px;
     z-index: 10;
-    grid-template-columns: 4fr 6fr 5fr;
+    grid-template-columns: 9fr 12fr 10fr;
 
     grid-template-rows: 1;
     grid-template-areas:
